# draftdiff

./: .cursorrules  .gitignore  CLAUDE.md  LICENSE  README.md  credentials.json  pyproject.toml
.github/workflows/: publish.yml
draftdiff/: aggregation.py  aggregation2.py  constants.py  databricks.py  dotabuff.py  generate_rosh_analysis_data.py  hero_builds.py  hero_win_rates.py  io.py  main.py  main2.py  opendota.py  pairwise_win_rates.py  reacthelper.py  s3.py  sheets.py  stratz.py  util.py  writetos3.py  writetosheets.py
draftdiff/models/: opendota.py  opendota_openapi_spec.json
draftdiff/models/dotaconstants/: ability_ids.json  heroes.json
scripts/: setup-ubuntu.sh  setup.sh
src/: aggregation.py  dotaherocounterpull.py  stratz.py
tests/: test_hero_builds.py
