[tool.poetry]
name = "draftdiff"
version = "0.4.0"
description = "creating dota2 counterpicker"
authors = ["Jeff", "Luke"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "draftdiff", from = "." }
]
include = ["pyproject.toml", "README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "3.11.9"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.1"
loguru = "^0.7.2"
tqdm = "^4.66.2"
requests = "^2.31.0"
google-api-python-client = "^2.125.0"
oauth2client = "^4.1.3"
google-auth = "^2.29.0"
gspread = "^6.1.0"
boto3 = "^1.34.122"
awscli = "^1.33.4"
pyarrow = "^16.1.0"
ruff = "^0.12.9"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
datamodel-code-generator = "^0.33.0"
diskcache = "^5.6.3"
crawl4ai = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["draftdiff"]
include = [
    "draftdiff/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
extend-select = [
    "Q",
    "RUF100",
    "RUF018",
    "C90",
    "UP",
    "I",
    "D",
    "TID251",
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
mccabe = { max-complexity = 15 }
ignore = ['D100', 'D101', 'D102', 'D103', 'D105', 'D107', 'D205', 'D415', 'E501', 'B011', 'B028', 'B904', 'PIE804']

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["draftdiff"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = false
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false
reportUnnecessaryTypeIgnoreComment = true
reportMissingModuleSource = false
include = [
    "draftdiff",
    "tests",
]
venvPath = "."
venv = "venv"
